# MmMvHPE

./: .gitignore  .gitmodules  AGENTS.md  README.md  main.py  pyproject.toml
configs/analysis/: panoptic_sam3d_segment_eval_cello3.yml  panoptic_sam3d_segment_eval_office1.yml  panoptic_sam3d_segment_eval_office2.yml
configs/datasets/: humman_split_config.yml  mmfi_split_config.yml  panoptic_split_config.yml
configs/demo/: humman_sam3d_body_vis.yml  humman_smpl_v5_kcam_gcn_mix_synth_v3.yml  humman_smpl_v5_kcam_gcn_mix_synth_v3_multiview.yml
configs/dev/: h36m_ours2.yml  h36m_ours2_cam2_depth.yml  h36m_ours2_camhead.yml  h36m_rgb_cam2.yml  h36m_rgb_depth_allcam.yml  h36m_rgb_depth_cam2.yml  h36m_rgb_depth_cam4.yml  humman_ablation.yml  humman_fusionformer_gt_pose.yml  humman_fusionformer_gt_pose_mini.yml  humman_leir_rgbpc.yml  humman_ours.yml  humman_ours_v2_global_joint.yml  humman_smpl_token.yml  humman_smpl_token2.yml  humman_smpl_token_new.yml  humman_smpl_token_new_onlykp.yml  humman_smpl_token_v4.yml  humman_test.yml  humman_test_depth_only.yml  humman_test_rgb_only.yml  mmfi.yml  mmfi_ours2.yml  mmfi_ours_v2.yml  mmfi_ours_v3.yml  mmfi_step.yml  mmfi_step_ours.yml
configs/vis/: panoptic_mask_runtime_depth.yml  panoptic_mask_runtime_rgb.yml  panoptic_mask_runtime_rgb_depth.yml  panoptic_sam_office.yml  panoptic_sam_office1_kinect003.yml  panoptic_sam_office1_kinect004.yml  panoptic_sam_office1_kinect005.yml  panoptic_sam_office1_kinect008.yml  panoptic_sam_office2_kinect007.yml  panoptic_sam_office2_kinect009.yml  panoptic_sam_piano3.yml  panoptic_seq1_office1_kinect008_no_camhead.yml  panoptic_seq1_office1_kinect008_with_camhead.yml  panoptic_seq1_office2_kinect009_no_camhead.yml  panoptic_seq1_office2_kinect009_with_camhead.yml  panoptic_seq1_runtime_mask_office2_kinect007_depth007_with_camhead.yml  panoptic_seq1_runtime_mask_office2_kinect009_depth001_with_camhead.yml  panoptic_seq3_cam18_2rgb.yml  panoptic_seq3_cam18_2rgb_stage2.yml  panoptic_seq3_cam18_2rgb_stage2_office_eval.yml  panoptic_seq3_cam18_rgbpc.yml  panoptic_seq3_cam18_rgbpc_stage2.yml  panoptic_seq3_cam18_rgbpc_stage2_office_eval.yml  panoptic_seq3_office.yml  panoptic_seq3_piano3.yml
datasets/: HUMMAN_PREPROCESSING.md  __init__.py  base_dataset.py  data_api.py  h36m_dataset.py  h36m_metadata.py  h36m_multiview_dataset.py  humman_camera_dataset_v1.py  humman_dataset.py  humman_dataset_v2.py  humman_dataset_v3.py  mmfi_dataset.py  panoptic_dataset.py  panoptic_preprocessed_dataset_v1.py  panoptic_preprocessed_dataset_v2.py  synthetic_exported_training_dataset.py
datasets/transforms/: __init__.py  camera_param_transform.py  formatting.py  general.py  humman_mask_transforms.py  leir_transforms.py  panoptic_mask_transforms.py  pc_transforms.py  pose_transforms.py  (+1 more)
docs/: README.md  config_guide.md  data_pipeline.md  datasets_models.md  eval_fixed_lidar_frame_algorithm.md  fusionformer_modality_baseline.md  h36m_fusionformer_multiview.md  h36m_preprocess.md  humman_lidar_coordinate_contract.md  humman_sam3_segmentation_mask_generation.md  humman_segmentation_mask_runtime_transforms.md  humman_synth_transfer_experiment.md  model_pipeline.md  panoptic_best_depth_camera_search.md  panoptic_kinoptic_preprocess.md  panoptic_modality_specific_extrinsics.md  panoptic_sam3_segmentation_mask_generation.md  panoptic_segmentation_mask_runtime_transforms.md  pc_structured_occlusion_augmentation.md  pcmpjpe_metrics.md  rerun_visualization.md  sam3d_gt_consistency_check.md  sam3d_humman_conversion_visualization.md  sam3d_official_mhr_conversion.md  sam3d_panoptic_segment_eval.md  sam3d_synthetic_data_v0a.md  sam_3d_body_environment.md  single_model_hpe.md  synthetic_lidar_self_occlusion_v1.md  synthetic_pretrain_and_finetune.md  synthetic_target_format_export.md  tools.md  xfi_modality_config.md
losses/: __init__.py  camera.py  keypoint.py  leir_loss.py
metrics/: __init__.py  camera.py  mpjpe.py  smpl_metrics.py
misc/: camera_batch.py  lr_scheduler.py  official_mhr_smpl_conversion.py  pose_enc.py  registry.py  rotation.py  sam3d_eval.py  skeleton.py  smpl.py  timer.py  utils.py  vis.py
models/: __init__.py  model_api.py
openspec/: config.yaml
projects/: __init__.py
scripts/: check_camera_pose_encoding.py  check_panoptic_joint_degeneracy.py  export_humman_mask_validation_samples.py  export_panoptic_mask_validation_samples.py  export_panoptic_modality_extrinsics_debug.py  export_panoptic_pipeline_debug_sample.py  export_panoptic_sam3d_overlay_rerun.py  export_synthetic_gt_formats.py  find_best_panoptic_depth_camera_sensor.py  run_humman_sam3_mask_shards.sh  run_panoptic_sam3d_worst_case_sweep.py  run_panoptic_seq1_runtime_mask_rgb_lidar_two_stage.sh  run_panoptic_seq3_occlusion_robustness.sh  run_sam3d_eval_suite.py  run_sam3d_gt_consistency_check.py  run_sam3d_synthetic_v0a.py  run_sam3d_synthetic_v0a_coco_dataset.py  run_synthetic_pretraining.sh  run_xfi_panoptic_occlusion_robustness.sh  visualize_inference_rerun.py  visualize_panoptic_keypoints_stability_video.py  visualize_sam3d_body_rerun.py  visualize_sam3d_humman_smpl24_conversion.py  visualize_synthetic_gt_exports.py
tests/: test_multi_camera_shapes.py  test_pcmpjpe_metrics.py  test_sync_keypoints_temporal.py  test_temporal_timm_wrapper.py
tools/: build_depth_background_map.py  check_panoptic_pose_availability.py  data_preprocess.py  eval_fixed_lidar_frame.py  eval_per_frame_sensor.py  extract_subject_depth_from_background.py  generate_humman_keypoints.py  generate_humman_sam3_segmentation_masks.py  generate_humman_smpl_outputs.py  generate_panoptic_sam3_segmentation_masks.py  image_detection.py  optimize_smpl_for_skl.py  panoptic_find_single_actor_sequences.py  patch_panoptic_preprocessed_extrinsics.py  pc_detection.py  predict_2d_skeletons_mmpose.py  preprocess_panoptic_kinoptic.py  sam3d_body_preflight.py  vis_and_save.py  vis_and_save_global.py  vis_gt_sequence.py  vis_smpl.py
(+444 files in other folders)
