[project]
name = "mmmvhpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "cdflib>=1.3.7",
    "chumpy",
    "cuda-toolkit==12.4",
    "einops>=0.8.1",
    "flash-attn>=2.8.3",
    "lightning>=2.6.0",
    "opencv-python>=4.12.0.88",
    "pointnet2",
    "rerun-sdk>=0.28.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "segment-anything",
    "smplpytorch>=0.0.8",
    "spconv>=2.3.8",
    "spconv-cu124>=2.3.8",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.22",
    "torch==2.5.1",
    "torch-scatter>=2.1.2",
    "torchvision==0.20.1",
    "ultralytics>=8.3.241",
    "wandb>=0.23.1",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/mattloper/chumpy" }
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
pointnet2 = { workspace = true, editable = true }
spconv = { git = "https://github.com/traveller59/spconv.git" }

[tool.uv.workspace]
members = [
    "models/pc_encoders/modules",
]
