[project]
name = "mmmvhpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "av2>=0.3.5",
    "cdflib>=1.3.7",
    "chumpy",
    "coverage>=7.13.3",
    "cuda-toolkit==12.4",
    "einops>=0.8.1",
    "flake8>=7.3.0",
    "flash-attn>=2.8.3",
    "h5py>=3.15.1",
    "interrogate>=1.7.0",
    "isort==4.3.21",
    "json-tricks>=3.17.3",
    "knn-cuda",
    "lightning>=2.6.0",
    "mamba-ssm",
    "matplotlib>=3.10.8",
    "miniball>=1.2.0",
    "mmcv",
    "mmengine>=0.10.7",
    "munkres>=1.1.4",
    "ninja>=1.13.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "parameterized>=0.9.0",
    "pcdet",
    "pillow>=12.1.0",
    "pointnet2",
    "psutil>=7.2.1",
    "pyquaternion>=0.9.9",
    "pytest>=9.0.2",
    "pytest-runner>=6.0.1",
    "requests>=2.32.5",
    "rerun-sdk>=0.28.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "segment-anything",
    "smplpytorch>=0.0.8",
    "smplx>=0.1.28",
    "spconv-cu124>=2.3.8",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.22",
    "torch>=1.8",
    "torch-scatter==2.1.2",
    "torchvision==0.20.1",
    "ultralytics>=8.3.241",
    "wandb>=0.23.1",
    "xdoctest>=0.10.0",
    "xtcocotools>=1.12",
    "yapf>=0.43.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp312-cp312-linux_x86_64.whl" }
chumpy = { git = "https://github.com/mattloper/chumpy" }
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
pointnet2 = { workspace = true, editable = true }
spconv = { git = "https://github.com/traveller59/spconv.git" }
pcdet = { git = "https://github.com/open-mmlab/OpenPCDet.git" }
knn-cuda = { url = "https://github.com/unlimblue/KNN_CUDA/releases/download/0.2/KNN_CUDA-0.2-py3-none-any.whl" }
mmcv = { git = "https://github.com/open-mmlab/mmcv.git" }

[tool.uv.pip]
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu124.html"]

[tool.uv.workspace]
members = [
    "models/pc_encoders/modules",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
torch-scatter = ["torch"]
mamba-ssm = [{ requirement = "torch", match-runtime = true }]
pcdet = ["torch"]
chumpy = ["pip"]
xtcocotools = ["numpy"]
mmcv = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
