[project]
name = "mmmvhpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "av2>=0.3.5",
    "cdflib>=1.3.7",
    "chumpy",
    "cuda-toolkit==12.4",
    "einops>=0.8.1",
    "flash-attn>=2.8.3",
    "huggingface-hub>=1.3.0,<2.0",
    "lightning>=2.6.0",
    "opencv-python>=4.12.0.88",
    "pcdet",
    "pointnet2",
    "pyquaternion>=0.9.9",
    "rerun-sdk>=0.28.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "segment-anything",
    "smplpytorch>=0.0.8",
    "smplx>=0.1.28",
    "spconv-cu124>=2.3.8",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.22",
    "torch==2.5.1",
    "torch-scatter==2.1.2",
    "torchvision==0.20.1",
    "ultralytics>=8.3.241",
    "wandb>=0.23.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp312-cp312-linux_x86_64.whl" }
chumpy = { git = "https://github.com/mattloper/chumpy" }
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
pointnet2 = { workspace = true, editable = true }
spconv = { git = "https://github.com/traveller59/spconv.git" }
pcdet = { git = "https://github.com/open-mmlab/OpenPCDet.git" }

[tool.uv.pip]
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu124.html"]

[tool.uv.workspace]
members = [
    "models/pc_encoders/modules",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
torch-scatter = ["torch"]
pcdet = ["torch"]
chumpy = ["pip"]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
